поправила по автотестам

--- a/blocks/card/__button/card__button.css
+++ b/blocks/card/__button/card__button.css
@@ -7,5 +7,5 @@
 }
 
 .card__button:focus{
-    background-image: url("../../../images/like-black.svg")
+    background-image: url("../../../images/like-black.svg");
 }
