--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,6 +1,9 @@
 .profile__add-button{
     width: 150px;
     height: 50px;
+    background-image: url("../../../images/add.svg");
+    background-repeat: no-repeat;
+    background-position: center;
     border: 2px solid #FFFFFF;
     box-sizing: border-box;
     border-radius: 2px;
