поправила по ревью

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -11,6 +11,8 @@
 @media screen and (max-width: 400px){
     .footer{
         max-width: 282px;
+        padding-top: 48px;
+        padding-bottom: 36px;
     }
     
 }
