--- a/blocks/card/__button/card__button.css
+++ b/blocks/card/__button/card__button.css
@@ -9,3 +9,8 @@
 .card__button:focus{
     background-image: url("../../../images/like-black.svg");
 }
+
+.card__button:hover{
+    opacity: 0.5;
+    cursor: pointer;
+}
