--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,19 +1,18 @@
 .header{
     width: 80%;
     max-width: 880px;
-    min-height: 74px;
+    min-height: 119px;
     margin: 0 auto;
-    padding-top: 45px;
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (max-width: 550px){
     .header{
         width: 100%;
-        min-height: 64px;
+        min-height: 84px;
+        
     }
     
 }
