--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,20 +1,4 @@
 .popup__container{
-    width: 430px;
-    height: 330px;
-    background-color: #FFFFFF;
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding-bottom: 34px;
-}
-
-@media screen and (max-width: 450px){
-    .popup__container{
-        width: 282px;
-        height: 322px;       
-    }
-   
+    position: relative;
+    
 }
