--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,6 +1,6 @@
 .profile__add-button{
     width: 150px;
-    height: 50px;
+    min-height: 50px;
     background-image: url("../../../images/add.svg");
     background-repeat: no-repeat;
     background-position: center;
@@ -22,6 +22,7 @@
 @media screen and (max-width: 550px){
     .profile__add-button{
         width: 86.7%;
+        min-width: 282px;
         margin-top: 0;
        
     }
