--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -5,7 +5,7 @@
     border: none;
     position: absolute;
     top: -38px;
-    left: 438px;
+    right: -40px;
     background-color: transparent;
     
     
@@ -17,7 +17,7 @@
         height: 20px;
         background-size: contain;
         top: -30px;
-        left: 262px;      
+        right: 0;      
     }
    
 }
