--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,4 +1,21 @@
 .popup__container{
     position: relative;
+    width: 100%;
+    max-width: 430px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    padding-bottom: 34px;
+    padding-top: 37px;
     
+}
+
+@media screen and (max-width: 500px){
+    .popup__container{
+        max-width: 282px;
+        max-height: 322px;     
+        padding-top: 25px;  
+        padding-bottom: 25px;
+    }
+   
 }
