--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -24,6 +24,7 @@
         width: 86.7%;
         min-width: 282px;
         margin-top: 0;
+        background-size: 15px 15px;
        
     }
    
