поправила по третьему ревью

--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -19,8 +19,9 @@
         height: 18px;
         align-self: flex-end;
         position: relative;
-        bottom: 86px;
-        left: 10px;
+        bottom: 53.5px;
+        left: 30px;
+        margin: 0;
        
     }
    
