--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -1,4 +1,4 @@
-.card__button{
+.card__like-button{
     background-image: url("../../../images/like.svg");
     width: 22px;
     height: 19px;
@@ -10,7 +10,7 @@
     background-image: url("../../../images/like-black.svg");
 }
 
-.card__button:hover{
+.card__like-button:hover{
     opacity: 0.5;
     cursor: pointer;
 }
