--- a/pages/index.css
+++ b/pages/index.css
@@ -31,4 +31,5 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__container/_type/popup__container_type_image.css);
 @import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__subtitle/popup__subtitle.css);
 @import url(../blocks/card/__delete-button/card__delete-button.css);
