поправила попап с картинкой

--- a/blocks/popup/__container/_type/popup__container_type_image.css
+++ b/blocks/popup/__container/_type/popup__container_type_image.css
@@ -10,8 +10,7 @@
 }
 
 @media screen and (max-width: 500px){
-    .popup__container{
-        max-width: 282px;
+    .popup__container_type_image{
         padding: 0;
     }
    
