--- a/blocks/popup/__container/_type/popup__container_type_image.css
+++ b/blocks/popup/__container/_type/popup__container_type_image.css
@@ -2,7 +2,7 @@
     position: relative;
     background-color: transparent;
     display: flex;
-    justify-content: center;;
+    justify-content: center;
     padding: 0;
     border: none;
     box-shadow: none;
