--- a/pages/index.css
+++ b/pages/index.css
@@ -33,3 +33,8 @@
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__subtitle/popup__subtitle.css);
 @import url(../blocks/card/__delete-button/card__delete-button.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
+@import url(../blocks/popup/__input-error/_active/popup__input-error_active.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_error.css);
+@import url(../blocks/button/_inactive/button_inactive.css);
+@import url(../blocks/popup/__input-container/popup__input-container.css);
