часть правок по первому ревью

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,7 +3,7 @@
     color:#545454;
     width: 90%;
     max-width: 880px;
-    margin: 0 auto;
+    margin: auto auto 0 auto;
     padding-top: 67px;
     padding-bottom: 60px;
 }
